working in the section main

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="_css/reset.css">
     <link rel="stylesheet" href="_css/styles.css">
+    <link rel="stylesheet" href="_css/animations.css">
     <link rel="stylesheet" href="_css/media.css">
     <title>Portfólio</title>
 </head>
@@ -30,7 +31,7 @@
         <section aria-label="seção currículo download Vandinelson" class="section-div">
             <div>
                 <h2 class="apresentacao">Olá, meu nome é Vandinelson Gomes</h2>
-                <h2 class="apresentacao">Desenvolvedor Web Frontend & UI Designer</h2>
+                <h2 class="apresentacao" id="digitando">Desenvolvedor Web Frontend | UI Designer</h2>
                 <p class="apresentacao">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. At temporibus id repudiandae dicta enim. Ipsum repellendus ad nostrum pariatur provident error earum voluptate corporis quae cupiditate! Libero blanditiis pariatur voluptas! lore
                 </p>
