implementation of light mode

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                         <li><a href="#contato">Contato</a></li>
                     </ul>
                 </nav>
-                <div id="dark-light"></div>
+                <img src="_img/moon.png" id="moon" alt="Imagem da lua">
             </div>
         </header>
         <section aria-label="seção currículo download Vandinelson" class="section-div">
@@ -33,7 +33,7 @@
                 <h2 class="apresentacao">Olá, meu nome é Vandinelson Gomes</h2>
                 <h2 class="apresentacao" id="digitando">Desenvolvedor Web Frontend | UI Designer</h2>
                 <p class="apresentacao">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. At temporibus id repudiandae dicta enim. Ipsum repellendus ad nostrum pariatur provident error earum voluptate corporis quae cupiditate! Libero blanditiis pariatur voluptas! lore
+                    Este é o meu site oficial de portfólio para mostrar todos os meus trabalhos relacionados com o desenvolvimento web e UI design.
                 </p>
                 <div id="redes-sociais">
                     <a href="https://github.com/vandinelsonrocha" target="_blank" rel="external"><ion-icon name="logo-github"></ion-icon></a>
