implementation of light mode

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="_css/styles.css">
     <link rel="stylesheet" href="_css/animations.css">
     <link rel="stylesheet" href="_css/media.css">
-    <title>Portfólio</title>
+    <title>Portfólio | Vandinelson</title>
 </head>
 <body>
     <main id="home">
@@ -19,13 +19,13 @@
                     <ul class="nav-primaria">
                         <li><a href="#home">Home</a></li>
                         <li><a href="#sobre">Sobre</a></li>
-                        <li><a href="#resumo">Resumo</a></li>
                         <li><a href="#habilidades">Habilidades</a></li>
+                        <li><a href="#experiencia">Experiência</a></li>
                         <li><a href="#projetos">Projetos</a></li>
                         <li><a href="#contato">Contato</a></li>
                     </ul>
                 </nav>
-                <img src="_img/moon.png" id="moon" alt="Imagem da lua">
+                <img src="_img/sun.png" id="sun" alt="Imagem da lua">
             </div>
         </header>
         <section aria-label="seção currículo download Vandinelson" class="section-div">
@@ -44,8 +44,13 @@
             </div>
             <img src="_img/Vandy.jpg" alt="Minha foto de apresentação">
         </section>
+        <a href="#" id="link-topo"><ion-icon name="caret-up-outline"></ion-icon></a>
     </main> 
     <section id="sobre"></section>
+    <section id="habilidades"></section>
+    <section id="experiencia"></section>
+    <section id="projetos"></section>
+    <footer id="contato"></footer>
  
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script src="_js/script.js"></script>
