working in section sobre

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="_css/reset.css">
     <link rel="stylesheet" href="_css/styles.css">
     <link rel="stylesheet" href="_css/animations.css">
@@ -46,7 +47,40 @@
         </section>
         <a href="#" id="link-topo"><ion-icon name="caret-up-outline"></ion-icon></a>
     </main> 
-    <section id="sobre"></section>
+    <section id="sobre">
+        <h2>Sobre mim</h2>
+        <div class="bolinhas">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
+        <div id="infos">
+            <img src="_img/Vandy.jpg" alt="Minha foto">
+            <div>
+                <p id="nome">Vandinelson Gomes</p>
+                <p class="sobre-mim">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum animi aspernatur accusantium sunt molestias pariatur voluptatibus, earum modi est autem quam incidunt minus deserunt ad asperiores illum quis cupiditate consequatur?
+                Praesentium aut, voluptatibus illo nisi, ex blanditiis vitae quis fuga, atque nostrum nesciunt voluptatum reprehenderit inventore repudiandae minus pariatur nobis illum totam corrupti asperiores? Consectetur illo natus dicta quo tempore?</p>
+                <div id="dev" class="sobre-mim">
+                    <div id="w-developer" class="web">
+                        <i class="fa-solid fa-globe"></i>
+                        <p>Web Developer</p>
+                        <button>Ver mais</button>
+                    </div>
+                    <div id="w-designer" class="web">
+                        <i class="fa-solid fa-pen-to-square"></i>
+                        <p>Web designer</p>
+                        <button>Ver mais</button>
+                    </div>
+                </div>
+                <button id="formacao" class="sobre-mim">Formação académica</button>
+                <div id="mais-infos">
+                    <address>Cabo Verde - São Vicente</address>
+                    <p>09/11/2000</p>
+                    <p>vandInforma.tic@gmail.com</p>
+                </div>
+            </div>
+        </div>
+    </section>
     <section id="habilidades"></section>
     <section id="experiencia"></section>
     <section id="projetos"></section>
