seção HABILIDADES:fazendo slider usando a API Swiperjs

--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"/>
     <link rel="stylesheet" href="_css/reset.css">
     <link rel="stylesheet" href="_css/styles.css">
+    <link rel="stylesheet" href="_css/habilidades.css">
     <link rel="stylesheet" href="_css/animations-effects.css">
     <link rel="stylesheet" href="_css/media.css">
     <title>Portfólio | Vandinelson</title>
@@ -26,7 +27,7 @@
                         <li><a href="#contato">Contato</a></li>
                     </ul>
                 </nav>
-                <img src="_img/sun.png" id="sun" alt="Imagem da lua">
+                <img src="img/sun.png" id="sun" alt="Imagem da lua">
             </div>
         </header>
         <section aria-label="seção currículo download Vandinelson" class="section-div">
@@ -43,7 +44,7 @@
                 </div>
                 <a href="#">Download CV</a>
             </div>
-            <img src="_img/Vandy.jpg" alt="Minha foto de apresentação">
+            <img src="img/Vandy.jpg" alt="Minha foto de apresentação">
         </section>
         <a href="#" id="link-topo"><ion-icon name="caret-up-outline"></ion-icon></a>
     </main> 
@@ -102,12 +103,121 @@
             <span></span>
             <span></span>
         </div>
+        <div id="slider">
+            <!-- Slider main container -->
+            <div class="swiper">
+                <!-- Additional required wrapper -->
+                <div class="swiper-wrapper">
+                    <!-- Slides -->
+                    <div class="swiper-slide">
+                        <div class="tech-desc" id="html">
+                            <h1 class="tech">HTML</h1>
+                            <p class="descricao">
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam qui dolorem repellat amet consectetur enim voluptatum fugiat facilis consequatur rerum, mollitia aliquid, molestias porro veniam vero soluta. Id, vitae tenetur?
+                            </p>
+                            <div class="classificacao">
+                                <ion-icon name="star"></ion-icon>
+                                <ion-icon name="star"></ion-icon>
+                                <ion-icon name="star"></ion-icon>
+                                <ion-icon name="star"></ion-icon>
+                                <ion-icon name="star"></ion-icon>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Slides -->
+                    <div class="swiper-slide">
+                        <div class="tech-desc" id="css">
+                            <h1 class="tech">CSS</h1>
+                            <p class="descricao">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit ex voluptas tempora eum assumenda rerum itaque maxime nulla facilis. Aspernatur autem molestiae optio consequuntur voluptatum, facere mollitia officia nam praesentium.
+                            </p>
+                            <div class="classificacao">
+                                <ion-icon name="star"></ion-icon>
+                                <ion-icon name="star"></ion-icon>
+                                <ion-icon name="star"></ion-icon>
+                                <ion-icon name="star"></ion-icon>
+                                <ion-icon name="star"></ion-icon>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Slides -->
+                    <div class="swiper-slide">
+                        <div class="tech-desc" id="js">
+                            <h1 class="tech">JavaScript</h1>
+                            <p class="descricao">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis repudiandae vero deserunt, nisi repellendus possimus consequuntur assumenda rem, dicta molestias ab nobis sit. Repellat maxime in deserunt quis doloribus ducimus!
+                            </p>
+                            <div class="classificacao">
+                                <ion-icon name="star"></ion-icon>
+                                <ion-icon name="star"></ion-icon>
+                                <ion-icon name="star"></ion-icon>
+                                <ion-icon name="star"></ion-icon>
+                                <ion-icon name="star"></ion-icon>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Slides -->
+                    <div class="swiper-slide">
+                        <div class="tech-desc" id="react">
+                            <h1 class="tech">ReactJS</h1>
+                            <p class="descricao">
+                                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Enim blanditiis modi reprehenderit repellat provident quia corporis at praesentium fuga, animi unde nulla cupiditate doloremque odit, asperiores, beatae voluptatem esse quidem.
+                            </p>
+                            <div class="classificacao">
+                                <ion-icon name="star"></ion-icon>
+                                <ion-icon name="star"></ion-icon>
+                                <ion-icon name="star"></ion-icon>
+                                <ion-icon name="star"></ion-icon>
+                                <ion-icon name="star"></ion-icon>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Slides -->
+                    <div class="swiper-slide">
+                        <div class="tech-desc" id="git">
+                            <h1 class="tech">Git</h1>
+                            <p class="descricao">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure repellat ad unde asperiores soluta repellendus corporis maxime illum impedit cupiditate alias necessitatibus eligendi a molestiae fuga ducimus reiciendis, rem deleniti!
+                            </p>
+                            <div class="classificacao">
+                                <ion-icon name="star"></ion-icon>
+                                <ion-icon name="star"></ion-icon>
+                                <ion-icon name="star"></ion-icon>
+                                <ion-icon name="star"></ion-icon>
+                                <ion-icon name="star"></ion-icon>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Slides -->
+                    <div class="swiper-slide">
+                        <div class="tech-desc" id="figma">
+                            <h1 class="tech">Figma</h1>
+                            <p class="descricao">
+                                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugiat nobis sequi veniam sed beatae repellat rem expedita earum vero obcaecati. Voluptates praesentium ipsum quaerat in aliquid incidunt eligendi. Error, quis?
+                            </p>
+                            <div class="classificacao">
+                                <ion-icon name="star"></ion-icon>
+                                <ion-icon name="star"></ion-icon>
+                                <ion-icon name="star"></ion-icon>
+                                <ion-icon name="star"></ion-icon>
+                                <ion-icon name="star"></ion-icon>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- If we need navigation buttons -->
+                <div class="swiper-button-next"></div>
+                <div class="swiper-button-prev"></div>
+                <div class="swiper-pagination"></div>
+            </div>
+        </div>
     </section>
     <section id="experiencia"></section>
     <section id="projetos"></section>
     <footer id="contato"></footer>
  
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
     <script src="_js/script.js"></script>
 </body>
 </html>
