seção HABILIDADES:Concluindo slider usando a API Swiperjs

--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
             <span></span>
             <span></span>
         </div>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non dolore quibusdam dolor cumque. Incidunt, eligendi reprehenderit voluptatum aut amet veniam temporibus, non quasi repellat cumque iste quos ad maxime nesciunt.</p>
         <div id="slider">
             <!-- Slider main container -->
             <div class="swiper">
@@ -110,97 +111,73 @@
                 <div class="swiper-wrapper">
                     <!-- Slides -->
                     <div class="swiper-slide">
-                        <div class="tech-desc" id="html">
-                            <h1 class="tech">HTML</h1>
-                            <p class="descricao">
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam qui dolorem repellat amet consectetur enim voluptatum fugiat facilis consequatur rerum, mollitia aliquid, molestias porro veniam vero soluta. Id, vitae tenetur?
-                            </p>
-                            <div class="classificacao">
-                                <ion-icon name="star"></ion-icon>
-                                <ion-icon name="star"></ion-icon>
-                                <ion-icon name="star"></ion-icon>
-                                <ion-icon name="star"></ion-icon>
-                                <ion-icon name="star"></ion-icon>
+                        <div class="wrapper">
+                            <div class="image">
+                                <img src="img/logo-html.png" alt="Logo do HTML">
+                                <div class="content">
+                                    <h1>HTML</h1>
+                                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Obcaecati quae illum ipsam consequatur numquam quia illo explicabo, qui facere accusantium, molestias necessitatibus accusamus doloremque mollitia et quidem nemo adipisci. Dignissimos!</p>
+                                </div>
                             </div>
                         </div>
                     </div>
                     <!-- Slides -->
                     <div class="swiper-slide">
-                        <div class="tech-desc" id="css">
-                            <h1 class="tech">CSS</h1>
-                            <p class="descricao">
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit ex voluptas tempora eum assumenda rerum itaque maxime nulla facilis. Aspernatur autem molestiae optio consequuntur voluptatum, facere mollitia officia nam praesentium.
-                            </p>
-                            <div class="classificacao">
-                                <ion-icon name="star"></ion-icon>
-                                <ion-icon name="star"></ion-icon>
-                                <ion-icon name="star"></ion-icon>
-                                <ion-icon name="star"></ion-icon>
-                                <ion-icon name="star"></ion-icon>
+                        <div class="wrapper">
+                            <div class="image">
+                                <img src="img/logo-css.png" alt="Logo do CSS">
+                                <div class="content">
+                                    <h1>CSS</h1>
+                                    <p>Lorem ipsum dolor sit amet</p>
+                                </div>
                             </div>
                         </div>
                     </div>
                     <!-- Slides -->
                     <div class="swiper-slide">
-                        <div class="tech-desc" id="js">
-                            <h1 class="tech">JavaScript</h1>
-                            <p class="descricao">
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis repudiandae vero deserunt, nisi repellendus possimus consequuntur assumenda rem, dicta molestias ab nobis sit. Repellat maxime in deserunt quis doloribus ducimus!
-                            </p>
-                            <div class="classificacao">
-                                <ion-icon name="star"></ion-icon>
-                                <ion-icon name="star"></ion-icon>
-                                <ion-icon name="star"></ion-icon>
-                                <ion-icon name="star"></ion-icon>
-                                <ion-icon name="star"></ion-icon>
+                        <div class="wrapper">
+                            <div class="image">
+                                <img src="img/logo-js.png" alt="Logo do JavaScript">
+                                <div class="content">
+                                    <h1>JavaScript</h1>
+                                    <p>Lorem ipsum dolor sit amet</p>
+                                </div>
                             </div>
                         </div>
                     </div>
                     <!-- Slides -->
                     <div class="swiper-slide">
-                        <div class="tech-desc" id="react">
-                            <h1 class="tech">ReactJS</h1>
-                            <p class="descricao">
-                                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Enim blanditiis modi reprehenderit repellat provident quia corporis at praesentium fuga, animi unde nulla cupiditate doloremque odit, asperiores, beatae voluptatem esse quidem.
-                            </p>
-                            <div class="classificacao">
-                                <ion-icon name="star"></ion-icon>
-                                <ion-icon name="star"></ion-icon>
-                                <ion-icon name="star"></ion-icon>
-                                <ion-icon name="star"></ion-icon>
-                                <ion-icon name="star"></ion-icon>
+                        <div class="wrapper">
+                            <div class="image">
+                                <img src="img/logo-react.png" alt="Logo do ReactJS">
+                                <div class="content">
+                                    <h1>ReactJS</h1>
+                                    <p>Lorem ipsum dolor sit amet</p>
+                                </div>
                             </div>
                         </div>
                     </div>
                     <!-- Slides -->
                     <div class="swiper-slide">
-                        <div class="tech-desc" id="git">
-                            <h1 class="tech">Git</h1>
-                            <p class="descricao">
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure repellat ad unde asperiores soluta repellendus corporis maxime illum impedit cupiditate alias necessitatibus eligendi a molestiae fuga ducimus reiciendis, rem deleniti!
-                            </p>
-                            <div class="classificacao">
-                                <ion-icon name="star"></ion-icon>
-                                <ion-icon name="star"></ion-icon>
-                                <ion-icon name="star"></ion-icon>
-                                <ion-icon name="star"></ion-icon>
-                                <ion-icon name="star"></ion-icon>
+                        <div class="wrapper">
+                            <div class="image">
+                                <img src="img/logo-git.png" alt="Logo do Git">
+                                <div class="content">
+                                    <h1>Git</h1>
+                                    <p>Lorem ipsum dolor sit amet</p>
+                                </div>
                             </div>
                         </div>
                     </div>
                     <!-- Slides -->
                     <div class="swiper-slide">
-                        <div class="tech-desc" id="figma">
-                            <h1 class="tech">Figma</h1>
-                            <p class="descricao">
-                                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugiat nobis sequi veniam sed beatae repellat rem expedita earum vero obcaecati. Voluptates praesentium ipsum quaerat in aliquid incidunt eligendi. Error, quis?
-                            </p>
-                            <div class="classificacao">
-                                <ion-icon name="star"></ion-icon>
-                                <ion-icon name="star"></ion-icon>
-                                <ion-icon name="star"></ion-icon>
-                                <ion-icon name="star"></ion-icon>
-                                <ion-icon name="star"></ion-icon>
+                        <div class="wrapper">
+                            <div class="image">
+                                <img src="img/logo-figma.png" alt="Logo do Figma">
+                                <div class="content">
+                                    <h1>Figma</h1>
+                                    <p>Lorem ipsum dolor sit amet</p>
+                                </div>
                             </div>
                         </div>
                     </div>
